--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Malini n Anushan n Dilmi n Supun",
   "license": "ISC"
 }
